# openapi-specs/openapi.json
@@ -208,6 +208,37 @@
             }
           }
         }
+      },
+      "put": {
+        "tags": [
+          "Members"
+        ],
+        "operationId": "Members_UpdateMember",
+        "requestBody": {
+          "x-name": "request",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/MemberUpdateRequest"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/api/Members/{id}": {
@@ -372,7 +403,7 @@
           "id": {
             "type": "string"
           },
-          "birthDay": {
+          "birthDate": {
             "type": "string",
             "format": "date"
           },
@@ -423,6 +454,28 @@
           },
           "memberId": {
             "type": "string"
+          }
+        }
+      },
+      "MemberUpdateRequest": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "displayName": {
+            "type": "string",
+            "nullable": true
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "city": {
+            "type": "string",
+            "nullable": true
+          },
+          "country": {
+            "type": "string",
+            "nullable": true
           }
         }
       }
