# src/API/Controllers/MembersController.cs
@@ -1,28 +1,33 @@
+
+using System.Security.Claims;
+using API.Data;
+using API.DTOs;
 using API.Entities;
 using API.Interfaces;
-using API.Mappers;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
+using Microsoft.EntityFrameworkCore;
 
 namespace API.Controllers;
-
 [Authorize]
 public class MembersController(IMembersRepository membersRepository) : BaseApiController
 {
+    
     [HttpGet]
-    public async Task<ActionResult<IReadOnlyList<Member>>> GetMembers()
+    public async Task<ActionResult<IReadOnlyList<Member>>> GetMembers() // se puede usar list, IEnumerable o IReadOnly 
     {
         return Ok(await membersRepository.GetMembersAsync());
     }
 
-    [HttpGet("{id}")] // https://localhost:5001/api/members/bob-id
+   
+    [HttpGet("{id}")] // se pone un parametro en la ruta api/members/bob-id
     public async Task<ActionResult<Member>> GetMember(string id)
     {
-        var member = await membersRepository.GetMemberAsync(id);
+        var member = await membersRepository.GetMemberAsync(id) ; //hace select de usuario
 
         if (member == null) return NotFound();
 
-        return member.ToResponse();
+        return member;
     }
 
     [HttpGet("{id}/photos")]
@@ -30,4 +35,29 @@ public class MembersController(IMembersRepository membersRepository) : BaseApiCo
     {
         return Ok(await membersRepository.GetPhotosAsync(id));
     }
+
+    [HttpPut]
+    public async Task<ActionResult> UpdateMember(MemberUpdateRequest request)
+    {
+        var memberId = User.FindFirstValue(ClaimTypes.NameIdentifier); // obtiene el id del usuario logueado
+
+        if(memberId == null) return BadRequest("No id found in token");
+
+        var member =await membersRepository.GetMemberAsync(memberId); // obtiene el usuario logueado
+
+        if (member == null) return BadRequest("Failed to get member");
+
+        member.DisplayName = request.DisplayName ?? member.DisplayName;
+        member.Description = request.Description ?? member.Description;
+        member.City = request.City ?? member.City;
+        member.Country = request.Country ?? member.Country;
+
+        membersRepository.Update(member);
+
+        if (await membersRepository.SaveAllAsync()) return NoContent();
+
+        return BadRequest("Failed to update member");
+    }
+
+
 }
